# patient-encounter-system

./: .bandit  .coverage  README.md  alembic.ini  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
alembic/: env.py
src/: database.py  main.py
src/models/: appointment.py  doctor.py  patient.py
src/patient_encounter_system/: database.py  main.py
src/patient_encounter_system/models/: appointment.py  doctor.py  patient.py
src/patient_encounter_system/schemas/: appointment.py
src/patient_encounter_system/services/: appointment_service.py  doctor_service.py  patient_service.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py  doctor_service.py  patient_service.py
tests/: conftest.py  test_api.py  test_appointments.py  test_doctors.py  test_patients.py
