[project]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = [
    {name = "VaishnaviChelagola",email = "chelagolavaishnavi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.14.14,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
